feat: Implement login and role-based menus
Integrated /login endpoint for user authentication.
Added separate User and Admin menus.
Improved CLI with better user feedback and error handling.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # application.properties
 server.port=8081
+
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+logging.level.org.springframework.web.client=DEBUG
